# LLM_TEST_WEB

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
static/: app.js  index.html  style.css
